Added border and highlight

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,4 +13,6 @@
     --prime: #007681;
     --alt: #63666A;
     --numbers: #CF578A;
+    --border: 2px solid #A7AAAE;
+    --highlighted: #ADEBCD;
 }
